--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,16 @@ dependencies:
     sdk: flutter
   image_picker: ^1.0.4
 
+  intl: ^0.17.0
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+
 
 flutter:
   uses-material-design: true
